Added second page

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -9,138 +9,216 @@
     <link rel="stylesheet" href="/lib/icons.css">
 </head>
 <body>
-    <div class="header">
-        <div>jtgeek@gmail.com</div>
-        <div>502-309-0000</div>
-        <div class="logo">
-            <a href="https://github.com/tucker87">
-                <icon class="github"></icon>
-                <span>tucker87</span>
-            </a>
-        </div>
-        <div class="logo">
-            <a href="https://www.linkedin.com/in/jtucker2">
-                <icon class="linkedIn"></icon>
-                <span>jtucker2</span>
-            </a>
-        </div>
-        <div class="logo">
-            <img style="aspect-ratio: 1; width: 73px;" src="/lib/qr-code-blue-frame.png"/>
-        </div>
-    </div>
-    <div class="sub-header">
-        <div class="who-am-i">
-            <span class="name">Jason Tucker</span>
-            <span class="title">Technical Lead</span>
-            <div>Shepherdsville, KY</div>
-        </div>
-        <p class="description">Self Trained Software Engineer with a drive to learn new technologies. Friendly provider of deep programming knowledge. Skills in Database Design, DevOps, Front-End and Back-End design.</p>
-    </div>
-    <div class="content">
-        <div class="info">
-            <div class="section contact">
-                <div class="title">Sites and Code</div>
-                <div class="items">
-                    <div class="item">
-                        <span class="title">Portfolio</span>
-                        <a class="value" target="_blank" href="https://notquite.me">notquite.me</a>
-                    </div>
-                    <div class="item">
-                        <span class="title">This Resume</span>
-                        <a class="value" target="_blank" href="https://github.com/tucker87/tucker87.github.io/tree/master/Resume">github.com/tucker87/resume</a>
-                    </div>
-                </div>
+    <section>
+        <div class="header">
+            <div>jtgeek@gmail.com</div>
+            <div>502-309-0000</div>
+            <div class="logo">
+                <a href="https://github.com/tucker87">
+                    <icon class="github"></icon>
+                    <span>tucker87</span>
+                </a>
             </div>
-            <div class="section skills">
-                <div class="title">Skills</div>
-                <div class="items">
-                    <div class="item">
-                        <span class="title">C#</span>
-                        <div class="score score-5"></div>
-                        <span class="value">Excellent</span>
-                    </div>
-                    <div class="item">
-                        <span class="title">Java</span>
-                        <div class="score score-3"></div>
-                        <span class="value">Good</span>
-                    </div>
-                    <div class="item">
-                        <span class="title">SQL</span>
-                        <div class="score score-4"></div>
-                        <span class="value">Very Good</span>
-                    </div>
-                    <div class="item">
-                        <span class="title">JavaScript</span>
-                        <div class="score score-5"></div>
-                        <span class="value">Excellent</span>
-                    </div>
-                    <div class="item">
-                        <span class="title">CSS</span>
-                        <div class="score score-4"></div>
-                        <span class="value">Very Good</span>
-                    </div>
-                    <div class="item">
-                        <span class="title">Linux OS</span>
-                        <div class="score score-4"></div>
-                        <span class="value">Very Good</span>
-                    </div>
-                    <div class="item">
-                        <span class="title">Windows OS</span>
-                        <div class="score score-5"></div>
-                        <span class="value">Excellent</span>
-                    </div>
-                    <div class="item">
-                        <span class="title">Mac OS</span>
-                        <div class="score score-3"></div>
-                        <span class="value">Good</span>
-                    </div>
-                </div>
+            <div class="logo">
+                <a href="https://www.linkedin.com/in/jtucker2">
+                    <icon class="linkedIn"></icon>
+                    <span>jtucker2</span>
+                </a>
+            </div>
+            <div class="logo">
+                <img style="aspect-ratio: 1; width: 73px;" src="/lib/qr-code-blue-frame.png"/>
             </div>
         </div>
-        <div class="history">
-            <div class="section">
-                <div class="title">Work History</div>
-                <div class="items">
-                    <div class="item">
-                        <span class="date">NOV 2015 - Current</span>
-                        <div>
-                            <span class="title">Technical Lead [Senior Engineer]</span>
-                            <span class="company">Strategic Marketing, Louisville, KY</span>
-                            <ul>
-                                <li>Founded multiple internal and user facing web applications</li>
-                                <li>Successfully migrated company to CI and automated deployments via Azure DevOps</li>
-                                <li>Created custom Single-Sign-On systems that is being adopted to company wide</li>
-                                <li>Introduced and taught out reactive design with Vue for improved UX development</li>
-                                <li>Integrated with multiple external CRMs, DMSs, email services and Automotive validation and verification systems</li>
-                            </ul>
+        <div class="sub-header">
+            <div class="who-am-i">
+                <span class="name">Jason Tucker</span>
+                <span class="title">Technical Lead</span>
+                <div>Shepherdsville, KY</div>
+            </div>
+            <p class="description">Self Trained Software Engineer with a drive to learn new technologies. Friendly provider of deep programming knowledge. Skills in Database Design, DevOps, Front-End and Back-End design.</p>
+        </div>
+        <div class="content">
+            <div class="info">
+                <div class="section contact">
+                    <div class="title">Sites and Code</div>
+                    <div class="items">
+                        <div class="item">
+                            <span class="title">Portfolio</span>
+                            <a class="value" target="_blank" href="https://notquite.me">notquite.me</a>
+                        </div>
+                        <div class="item">
+                            <span class="title">This Resume</span>
+                            <a class="value" target="_blank" href="https://github.com/tucker87/tucker87.github.io/tree/master/Resume">github.com/tucker87/resume</a>
                         </div>
                     </div>
-                    <div class="item">
-                        <span class="date">JUL 2014 - NOV-2015</span>
-                        <div>
-                            <span class="title">Application Developer</span>
-                            <span class="company">Refund Advantage, Louisville, KY</span>
-                            <ul>
-                                <li>Replaced reporting systems with dynamic system that allowed for creation of reports based on XML</li>
-                                <li>Taught out standardization and normalization layouts for SQL databases and procedures</li>
-                                <li>Maintained 20+ internal server applications.</li>
-                            </ul>
+                </div>
+                <div class="section skills">
+                    <div class="title">Skills</div>
+                    <div class="items">
+                        <div class="item">
+                            <span class="title">C#</span>
+                            <div class="score score-5"></div>
+                            <span class="value">Excellent</span>
+                        </div>
+                        <div class="item">
+                            <span class="title">Java</span>
+                            <div class="score score-3"></div>
+                            <span class="value">Good</span>
+                        </div>
+                        <div class="item">
+                            <span class="title">SQL</span>
+                            <div class="score score-4"></div>
+                            <span class="value">Very Good</span>
+                        </div>
+                        <div class="item">
+                            <span class="title">JavaScript</span>
+                            <div class="score score-5"></div>
+                            <span class="value">Excellent</span>
+                        </div>
+                        <div class="item">
+                            <span class="title">CSS</span>
+                            <div class="score score-4"></div>
+                            <span class="value">Very Good</span>
+                        </div>
+                        <div class="item">
+                            <span class="title">Linux OS</span>
+                            <div class="score score-4"></div>
+                            <span class="value">Very Good</span>
+                        </div>
+                        <div class="item">
+                            <span class="title">Windows OS</span>
+                            <div class="score score-5"></div>
+                            <span class="value">Excellent</span>
+                        </div>
+                        <div class="item">
+                            <span class="title">Mac OS</span>
+                            <div class="score score-3"></div>
+                            <span class="value">Good</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="section">
-                <div class="title">Personal Projects</div>
-                <div class="items">
-                   <ul>
-                       <li>Developed an Access database that interfaced with Apple's web API to track all Apple repairs done by Best Buy.</li>
-                       <li>Published board game helpers apps for mobile webOS platform</li>
-                       <li>Competed in a time limited API challenge for RIOT Games.</li>
-                       <li>This resume's source code is available on <a class="link" target="_blank" href="https://github.com/tucker87">GitHub</a></li>
-                   </ul>
+            <div class="history">
+                <div class="section">
+                    <div class="title">Work History</div>
+                    <div class="items">
+                        <div class="item">
+                            <span class="date">NOV 2015 - Current</span>
+                            <div>
+                                <span class="title">Technical Lead [Senior Engineer]</span>
+                                <span class="company">Strategic Marketing, Louisville, KY</span>
+                                <ul>
+                                    <li>Founded multiple internal and user facing web applications</li>
+                                    <li>Successfully migrated company to CI and automated deployments via Azure DevOps</li>
+                                    <li>Created custom Single-Sign-On systems that is being adopted to company wide</li>
+                                    <li>Introduced and taught out reactive design with Vue for improved UX development</li>
+                                    <li>Integrated with multiple external CRMs, DMSs, email services and Automotive validation and verification systems</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <span class="date">JUL 2014 - NOV-2015</span>
+                            <div>
+                                <span class="title">Application Developer</span>
+                                <span class="company">Refund Advantage, Louisville, KY</span>
+                                <ul>
+                                    <li>Replaced reporting systems with dynamic system that allowed for creation of reports based on XML</li>
+                                    <li>Taught out standardization and normalization layouts for SQL databases and procedures</li>
+                                    <li>Maintained 20+ internal server applications.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section">
+                    <div class="title">Personal Projects</div>
+                    <div class="items">
+                    <ul>
+                        <li>Developed an Access database that interfaced with Apple's web API to track all Apple repairs done by Best Buy.</li>
+                        <li>Published board game helpers apps for mobile webOS platform</li>
+                        <li>Competed in a time limited API challenge for RIOT Games.</li>
+                        <li>This resume's source code is available on <a class="link" target="_blank" href="https://github.com/tucker87">GitHub</a></li>
+                    </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section>
+        <div class="projects">
+            <div class="title">Projects at Strategic Marketing</div>
+            <div class="history">
+        
+                <div class="section">
+                    <h3>Directed Marketing Web Application</h3>
+                    <span class="description">Developed an application from the ground up to allow for hyper targeted mailings</span>
+                    <span class="description">Allows the user to design a Mail, Email, Online-Advertisement or Call Center Campaign</span>
+                    <span class="description">Campaigns can target customers in the Dealer's CRM or from external data vendors</span>
+                    <span class="description">Worked with the Art department on integrating a variable piece generation system that allowed the company to run small jobs in tandem in order to benefit from large piece discounts from the Post Office</span>
+                    <ul>
+                        <li>.NET Core / Framework</li>
+                        <li>MVC / Razor Pages</li>
+                        <li>Web API</li>
+                        <li>C#</li>
+                        <li>MS SQL</li>
+                        <li>HTML / CSS</li>
+                        <li>Vue</li>
+                        <li>Dapper</li>
+                        <li>Entity Framework</li>
+                        <li>Swagger</li>
+                        <li>SignalR</li>
+                        <li>Vite</li>
+                    </ul>
+                </div>
+                <div class="section">
+                    <h3>Background Job Processor</h3>
+                    <span class="description">Built out a background job processing system to handle a wide variety of tasks from PDF Generation to Campaign Deployments</span>
+                    <span class="description">Jobs are triggered on a schedule, by API call or via a Nuget Package</span>
+                    <span class="description">Provided live progress updates and notifications to users across all internal applications</span>                    
+                    <ul>
+                        <li>C#</li>
+                        <li>Web API</li>
+                        <li>Hangfire</li>
+                        <li>SignalR</li>
+                        <li>Nuget</li>
+                    </ul>
+                </div>
+                <div class="section">
+                    <h3>ASP.NET Web Forms</h3>
+                    <span class="description">Maintained multiple Web Forms Applications and worked to migrate them to newer frameworks</span>
+                    <ul>
+                        <li>C#</li>
+                        <li>ASP.NET Web Forms</li>
+                        <li>jQuery</li>
+                    </ul>
+                </div>
+                <div class="section">
+                    <h3>Metrics, Logging and Visibility</h3>
+                    <span class="description">Structured a Logging and Metrics solution for monitoring all company servers and applications</span>
+                    <ul>
+                        <li>Ubuntu Server</li>
+                        <li>Docker</li>
+                        <li>Docker Compose</li>
+                        <li>YAML</li>
+                        <li>Grafana</li>
+                        <li>Portainer</li>
+                        <li>Prometheus</li>
+                        <li>Loki</li>
+                        <li>Grafana Alloy</li>
+                    </ul>
+                </div>
+                <div class="section">
+                    <h3>Azure Release and Git standards</h3>
+                    <span class="description">Established standards and templates for Code Management and application Releases</span>
+                    <ul>
+                        <li>Azure DevOps</li>
+                        <li>YAML</li>
+                        <li>Powershell</li>
+                        <li>Git</li>
+                    </ul>
+                </div>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
