Added a line to DevOps section removed 3 bullets from Metrics to keep on single page

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -197,24 +197,24 @@
                     <span class="description">Structured a Logging and Metrics solution for monitoring all company servers and applications</span>
                     <ul>
                         <li>Ubuntu Server</li>
-                        <li>Docker</li>
-                        <li>Docker Compose</li>
-                        <li>YAML</li>
+                        <li>Docker + Compose</li>
                         <li>Grafana</li>
                         <li>Portainer</li>
                         <li>Prometheus</li>
                         <li>Loki</li>
-                        <li>Grafana Alloy</li>
                     </ul>
                 </div>
                 <div class="section">
                     <h3>Azure Release and Git standards</h3>
                     <span class="description">Established standards and templates for Code Management and application Releases</span>
+                    <span class="description">Implemented/Iterated Software Development Life Cycle guidance and software release processes</span>
                     <ul>
                         <li>Azure DevOps</li>
                         <li>YAML</li>
                         <li>Powershell</li>
                         <li>Git</li>
+                        <li>Markdown</li>
+                        <li>Mermaid Diagraming</li>
                     </ul>
                 </div>
             </ul>
