--- a/Resume/index.html
+++ b/Resume/index.html
@@ -26,7 +26,8 @@
                 </a>
             </div>
             <div class="logo">
-                <img style="aspect-ratio: 1; width: 73px;" src="/lib/qr-code-blue-frame.png"/>
+                <span style="text-align: right; padding-right: 2px;">View Online</span>
+                <img style="aspect-ratio: 1; width: 60px;" src="/lib/qr2.svg"/>
             </div>
         </div>
         <div class="sub-header">
