Made wording improvements suggested by Jonathan

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -36,7 +36,8 @@
                 <span class="title">Technical Lead</span>
                 <div>Shepherdsville, KY</div>
             </div>
-            <p class="description">Self Trained Software Engineer with a drive to learn new technologies. Friendly provider of deep programming knowledge. Skills in Database Design, DevOps, Front-End and Back-End design.</p>
+            <p class="description">Seasoned full stack developer with over 10 years of applied experience</p>
+            <p class="description">Lead projects that have generated more than $30 million of revenue</p>
         </div>
         <div class="content">
             <div class="info">
@@ -111,8 +112,8 @@
                                 <ul>
                                     <li>Founded multiple internal and user facing web applications</li>
                                     <li>Successfully migrated company to CI and automated deployments via Azure DevOps</li>
-                                    <li>Created custom Single-Sign-On systems that is being adopted to company wide</li>
-                                    <li>Introduced and taught out reactive design with Vue for improved UX development</li>
+                                    <li>Increased internal security by creating a Single-Sign-On system used company wide and integrated with 10+ apps</li>
+                                    <li>Modernized front end applications by learning and implementing Vue on all new projects</li>
                                     <li>Integrated with multiple external CRMs, DMSs, email services and Automotive validation and verification systems</li>
                                 </ul>
                             </div>
