Github Pages URLs are case sensitive

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="logo">
                 <span style="text-align: right; padding-right: 2px;">View Online</span>
-                <img style="aspect-ratio: 1; width: 60px;" src="/lib/qr2.svg"/>
+                <img style="aspect-ratio: 1; width: 60px;" src="/lib/QR2.svg"/>
             </div>
         </div>
         <div class="sub-header">
