Group the paragraphs back up

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -36,8 +36,10 @@
                 <span class="title">Technical Lead</span>
                 <div>Shepherdsville, KY</div>
             </div>
-            <p class="description">Seasoned full stack developer with over 10 years of applied experience</p>
-            <p class="description">Lead projects that have generated more than $30 million of revenue</p>
+            <div>
+                <p class="description">Seasoned full stack developer with over 10 years of applied experience</p>
+                <p class="description">Lead projects that have generated more than $30 million of revenue</p>
+            </div>
         </div>
         <div class="content">
             <div class="info">
